[tool.poetry]
name = "blankdemo1"
version = "0.1.0"
description = ""
authors = ["DuncanAtWoolworths <dandrews3@woolworths.com.au>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
